--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
     <application
@@ -14,9 +16,7 @@
         android:roundIcon="@mipmap/i_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPCD"
-        tools:targetApi="31"
-
-        >
+        tools:targetApi="31">
 
         <activity
             android:name=".app.home.MainActivity"
