--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".app.home.MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".app.login.LoginActivity" />
-        <activity android:name=".SplashActivity" />
+        <activity android:name=".app.home.MainActivity" />
         <activity android:name=".UserActivity" />
     </application>
 
